# cnn

./: CMakeLists.txt  LICENSE  README.md
cnn/: CMakeLists.txt  aligned-mem-pool.h  approximator.cc  approximator.h  cnn.cc  cnn.h  conv.cc  cuda.cc  cuda.h  data-util.cc  data-util.h  decode.h  deep-lstm.cc  dglstm.cc  dglstm.h  dict.cc  dict.h  dim.h  dnn.cc  dnn.h  exec.cc  exec.h  expr-xtra.cc  expr-xtra.h  expr.cc  expr.h  functors.h  gpu-kernels.h  gpu-ops.cu  gpu-ops.cuh  gpu-ops.h  grad-check.cc  grad-check.h  gru.cc  gru.h  init.cc  init.h  lstm.cc  lstm.h  macros.h  (+28 more)
examples/: CMakeLists.txt  attentional.cc  attentional.h  convmodel.h  cxtattentional.h  cxtencdec.h  embed-cl.cc  encdec.cc  expr-xtra.cc  expr-xtra.h  mem_seq2seq_encdec.cc  mp.cc  nlm.cc  poisson-regression.cc  regattentional.h  rnnlm-aevb.cc  rnnlm.cc  rnnlm2.cc  rnnlm2_cls_based.cc  seq2seq_encdec.cc  skiprnnlm.cc  tag-bilstm.cc  textcat.cc  xor-xent.cc  xor.cc
exp/dialogue/: README  s41.rmspropwithmomentum.gru.AWI_InputFeedingDropout.s01.eta.hd.i50.10k.bat  s41.rmspropwithmomentum.gru.AWI_InputFeedingDropout.s01.eta.hd.i50.10k.test.bat  s41.rmspropwithmomentum.gru.AWI_InputFeedingDropout.s01.eta.hd.i50.bat
exp/encdec/: encdec.bat
exp/lm/: README  create_lm_class.py  lm.py  rnnlm2.bat  rnnlm2.dglstm.bat  rnnlm2.tst.bat  rnnlm2_cls.bat  rnnlm2_cls_tst.bat
exp/smt/: smt.example.bat
ext/dialogue/: CMakeLists.txt  attention_with_intention.h  cxtencdec.h  dialogue.h  dialogue_process.h
ext/encdec/: CMakeLists.txt  encdec.h
ext/ir/: ir.h
ext/lda/: CMakeLists.txt  lda.h
ext/ngram/: CMakeLists.txt  ngram.h
ext/trainer/: CMakeLists.txt  eval_proc.h  train_proc.h  train_proc_wrapper.h
